Bug 520101 - Fix audio when hotswapping sound output on Mac. r=doublec a=roc